--- a/webcrank-dispatch.cabal
+++ b/webcrank-dispatch.cabal
@@ -7,10 +7,27 @@ library
   hs-source-dirs:      src
 
   exposed-modules:     Webcrank.Dispatch
+                     , Webcrank.Dispatch.Path
+                     , Webcrank.Dispatch.Route
+                     , Webcrank.Dispatch.Types
 
-  build-depends:       base                >= 3          && < 5
+  build-depends:       base                >= 3
                      , bytestring          >= 0.10
                      , text                >= 0.11
+                     , transformers        >= 0.3
 
   ghc-options:         -Wall -O2
 
+test-suite doctests
+  hs-source-dirs:      tests
+
+  main-is:             doctests.hs
+
+  type:                exitcode-stdio-1.0
+
+  ghc-options:         -Wall 
+                       -threaded
+
+  build-depends:       base >=3 && < 5
+                     , doctest >= 0.9.1
+                     , QuickCheck >= 2.0
