--- a/webcrank-dispatch.cabal
+++ b/webcrank-dispatch.cabal
@@ -6,28 +6,14 @@ cabal-version: >= 1.8
 library
   hs-source-dirs:      src
 
-  exposed-modules:     Web.Crank.Dispatch
-                     , Web.Crank.Dispatch.Path
-                     , Web.Crank.Dispatch.Route
-                     , Web.Crank.Dispatch.Types
+  exposed-modules:     Webcrank.Dispatch
 
-  build-depends:       base                >= 3
+  build-depends:       base                >= 4.6
                      , bytestring          >= 0.10
+                     , mtl                 >= 2.0
+                     , reroute             >= 0.1
                      , text                >= 0.11
-                     , transformers        >= 0.3
+                     , unordered-containers >= 0.2
 
   ghc-options:         -Wall -O2
 
-test-suite doctests
-  hs-source-dirs:      tests
-
-  main-is:             doctests.hs
-
-  type:                exitcode-stdio-1.0
-
-  ghc-options:         -Wall 
-                       -threaded
-
-  build-depends:       base >=3 && < 5
-                     , doctest >= 0.9.1
-                     , QuickCheck >= 2.0
