--- a/webcrank-dispatch.cabal
+++ b/webcrank-dispatch.cabal
@@ -1,5 +1,14 @@
 name: webcrank-dispatch
-version: 0.1
+version: 0.0.1
+license:            BSD3
+license-file:       LICENCE
+author:             Richard Wallace <rwallace@thewallacepack.net>
+maintainer:         Richard Wallace <rwallace@thewallacepack.net>
+copyright:          (c) 2015 Richard Wallace
+synopsis:           A simple request dispatcher.
+category:           Web
+homepage:           https://github.com/webcrank/webcrank-dispatch.hs-
+bug-reports:        https://github.com/webcrank/webcrank-dispatch.hs/issues
 build-type: Simple
 cabal-version: >= 1.8
 
