--- a/webcrank-dispatch.cabal
+++ b/webcrank-dispatch.cabal
@@ -20,6 +20,7 @@ library
   build-depends:       base                >= 4.6
                      , bytestring          >= 0.10
                      , mtl                 >= 2.0
+                     , path-pieces         >= 0.1
                      , reroute             >= 0.1
                      , text                >= 0.11
                      , unordered-containers >= 0.2
