--- a/webcrank-dispatch.cabal
+++ b/webcrank-dispatch.cabal
@@ -11,13 +11,14 @@ homepage:           https://github.com/webcrank/webcrank-dispatch.hs-
 bug-reports:        https://github.com/webcrank/webcrank-dispatch.hs/issues
 build-type: Simple
 cabal-version: >= 1.8
+description:        A simple request dispatcher.
 
 library
   hs-source-dirs:      src
 
   exposed-modules:     Webcrank.Dispatch
 
-  build-depends:       base                >= 4.6
+  build-depends:       base                >= 4.6 && < 5
                      , bytestring          >= 0.10
                      , mtl                 >= 2.0
                      , path-pieces         >= 0.1
@@ -25,5 +26,5 @@ library
                      , text                >= 0.11
                      , unordered-containers >= 0.2
 
-  ghc-options:         -Wall -O2
+  ghc-options:         -Wall
 
