--- a/webcrank-dispatch.cabal
+++ b/webcrank-dispatch.cabal
@@ -7,11 +7,15 @@ maintainer:         Richard Wallace <rwallace@thewallacepack.net>
 copyright:          (c) 2015 Richard Wallace
 synopsis:           A simple request dispatcher.
 category:           Web
-homepage:           https://github.com/webcrank/webcrank-dispatch.hs-
+homepage:           https://github.com/webcrank/webcrank-dispatch.hs
 bug-reports:        https://github.com/webcrank/webcrank-dispatch.hs/issues
 build-type: Simple
 cabal-version: >= 1.8
 description:        A simple request dispatcher.
+
+source-repository   head
+  type:             git
+  location:         https://github.com/webcrank/webcrank-dispatch.hs.git
 
 library
   hs-source-dirs:      src
