--- a/webcrank-dispatch.cabal
+++ b/webcrank-dispatch.cabal
@@ -38,7 +38,8 @@ library
   build-depends:       base                >= 4.6 && < 5
                      , mtl                 >= 2.0
                      , path-pieces         >= 0.1
-                     , reroute             >= 0.1
+                     , hvect               >= 0.1
+                     , reroute             >= 0.3
                      , text                >= 0.11
                      , unordered-containers >= 0.2
 
